# clutter-gst

./: NEWS  README  clutter-gst.doap  clutter-gst.pc.in  configure.ac
clutter-gst/: Makefile.am  clutter-gst-actor.c  clutter-gst-actor.h  clutter-gst-aspectratio.c  clutter-gst-aspectratio.h  clutter-gst-auto-video-sink.c  clutter-gst-auto-video-sink.h  clutter-gst-camera-actor.c  clutter-gst-camera-actor.h  clutter-gst-camera-device.c  clutter-gst-camera-manager.c  clutter-gst-camera-manager.h  clutter-gst-camera.c  clutter-gst-camera.h  clutter-gst-content.c  clutter-gst-content.h  clutter-gst-crop.c  clutter-gst-crop.h  clutter-gst-marshal.list  clutter-gst-pipeline.c  clutter-gst-pipeline.h  clutter-gst-playback.c  clutter-gst-playback.h  clutter-gst-player.c  clutter-gst-player.h  clutter-gst-plugin.c  clutter-gst-private.h  clutter-gst-types.c  clutter-gst-types.h  clutter-gst-util.c  clutter-gst-util.h  clutter-gst-video-actor.c  clutter-gst-video-actor.h  clutter-gst-video-sink.c  clutter-gst-video-sink.h  clutter-gst-video-texture.c  clutter-gst.h
doc/reference/: Makefile.am  clutter-gst-docs.sgml  clutter-gst-sections.txt
examples/: .gitignore  Makefile.am  README  camera-list.js  camera-mosaic.c  camera-player.c  pieces.js  simple-player.js  video-content.c  video-flip.js  video-flip2.js  video-player.c  video-sink-navigation.c  video-sink.c  video-wall.js
tests/: .gitignore  Makefile.am  test-alpha.c  test-rgb-upload.c  test-seek.c  test-start-stop.c  test-video-actor-new-unref-loop.c  test-video-texture-new-unref-loop.c  test-yuv-upload.c
